<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/mainYuGiOhCardDisplay"
        android:layout_width="373dp"
        android:layout_height="217dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:fadeScrollbars="true"
        android:scrollbars = "vertical"
        android:text="@string/app_name"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/mainCardNameEditText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:ems="10"
        android:gravity="center"
        android:hint="@string/mainCardNameHint"
        android:inputType="textPersonName"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/mainYuGiOhCardDisplay" />

    <EditText
        android:id="@+id/mainCardAttackEditText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:ems="10"
        android:gravity="center"
        android:hint="@string/mainCardAttackHint"
        android:inputType="numberSigned"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/mainCardNameEditText" />

    <EditText
        android:id="@+id/mainCardDefenseText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:ems="10"
        android:gravity="center"
        android:hint="@string/mainCardDefenseHint"
        android:inputType="numberSigned"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.018"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/mainCardAttackEditText" />

    <Button
        android:id="@+id/mainSubmitButton"
        android:layout_width="150dp"
        android:layout_height="169dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:text="@string/mainSubmitButton"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/mainYuGiOhCardDisplay" />

    <Button
        android:id="@+id/adminButton"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:gravity="center"
        android:text="Admin Stuff"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/mainSubmitButton" />

    <TextView
        android:id="@+id/textView_admin"
        android:layout_width="198dp"
        android:layout_height="52dp"
        android:layout_marginTop="28dp"
        android:gravity="center"
        android:text="You're an admin"
        android:visibility="gone"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/mainSubmitButton"
        tools:visibility="visible" />
</androidx.constraintlayout.widget.ConstraintLayout>